<resources>
    <string name="app_name">FundIt</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="signup">Sign Up</string>
    <string name="if_already_register">Already Register</string>
    <string name="signin">Sign in</string>
    <string name="investor_profile">Investor Profile</string>
    <string name="about_us">About Us</string>
    <string name="naviopen">navigation open</string>
    <string name="naviclose">navigation close</string>
    <string name="bio">Tell us about yourself...</string>
    <string name="experience">Tell us about your experience...</string>
    <string name="company_name">Company Name</string>
    <string name="publish">publish</string>
    <string name="save">save</string>
    <string name="update">update</string>


    <string-array name="user">
        <item>Select User Type</item>
        <item>Founder</item>
        <item>Investor</item>
    </string-array>
    <string name="title_activity_demo">demo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="education">Tell us about your education...</string>


</resources>